--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 venv
 dist*
-pure_visual_grounding.egg-info
+pure_visual_grounder.egg-info
 __pycache__/
 .ipynb_checkpoints
 .idea/
 .vscode/
-pure_visual_grounding.iml
+pure_visual_grounder.iml
 MANIFEST.in
 USAGE_EXAMPLES.md
 PYPI_UPLOAD.sh
